device_name -> device_type
