# docs/swagger.yaml
@@ -53,7 +53,7 @@ paths:
                 - user_id
                 - platform
                 - os_version
-                - device_name
+                - device_type
                 - app_version
                 - lang
               properties:
@@ -69,10 +69,10 @@ paths:
                   type: string
                   description: "Phone's operating system version"
                   example: "12.0"
-                device_name:
+                device_type:
                   type: string
-                  description: "Name of the device"
-                  example: "Jan's iPhone"
+                  description: "Type of the device"
+                  example: "iPhone X"
                 app_version:
                   type: string
                   description: "Version of the Anna app"
